text visibility for dark color gradient fix
added background blur to the container to ensure the container contents are always visible even when the gradient set are dark

--- a/backgroundgen.css
+++ b/backgroundgen.css
@@ -10,6 +10,16 @@ body {
 }
 .container {
   text-align: center;
+  max-width: 450px;
+  margin: 0 auto;
+  background: rgba(255, 255, 255, 0.4);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgb(255 255 255 / 10%);
+  padding: 0 25px;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
 }
 h1 {
   font-size: 4rem;
